// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavBar should render collapsed in subcategory route 1`] = `
<div>
  <nav
    class="css-1mcp4ri"
  >
    <div
      class="css-ixqrcq"
    >
      <div
        class="css-6odjo7"
      >
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/media"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                movie
              </span>
              <p
                class="css-2k34x2"
              >
                Media
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/ai"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                psychology
              </span>
              <p
                class="css-2k34x2"
              >
                AI
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/downloading"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                download_for_offline
              </span>
              <p
                class="css-2k34x2"
              >
                Downloading
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/educational"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                school
              </span>
              <p
                class="css-2k34x2"
              >
                Educational
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/mobile"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                smartphone
              </span>
              <p
                class="css-2k34x2"
              >
                Mobile
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/desktop"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                desktop_windows
              </span>
              <p
                class="css-2k34x2"
              >
                Desktop
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/reading"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                library_books
              </span>
              <p
                class="css-2k34x2"
              >
                Reading
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/gaming"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                sports_esports
              </span>
              <p
                class="css-2k34x2"
              >
                Gaming
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/privacy-security"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                admin_panel_settings
              </span>
              <p
                class="css-2k34x2"
              >
                Privacy
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/audio"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                podcasts
              </span>
              <p
                class="css-2k34x2"
              >
                Audio
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/non-english"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                translate
              </span>
              <p
                class="css-2k34x2"
              >
                Non-English
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/miscellaneous"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                category
              </span>
              <p
                class="css-2k34x2"
              >
                Miscellaneous
              </p>
            </div>
          </a>
        </div>
      </div>
      <div
        class="css-6odjo7"
      >
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/system-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                settings_suggest
              </span>
              <p
                class="css-2k34x2"
              >
                System Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/file-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                folder_zip
              </span>
              <p
                class="css-2k34x2"
              >
                File Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/internet-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                language
              </span>
              <p
                class="css-2k34x2"
              >
                Internet Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/social-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                groups
              </span>
              <p
                class="css-2k34x2"
              >
                Social Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/text-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                text_fields
              </span>
              <p
                class="css-2k34x2"
              >
                Text Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/gaming-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                sports_esports
              </span>
              <p
                class="css-2k34x2"
              >
                Gaming Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/image-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                image
              </span>
              <p
                class="css-2k34x2"
              >
                Image Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/video-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                video_library
              </span>
              <p
                class="css-2k34x2"
              >
                Video Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/audio-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                headphones
              </span>
              <p
                class="css-2k34x2"
              >
                Audio Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/educational-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                school
              </span>
              <p
                class="css-2k34x2"
              >
                Educational Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/developer-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                terminal
              </span>
              <p
                class="css-2k34x2"
              >
                Developer Tools
              </p>
            </div>
          </a>
        </div>
      </div>
      <div
        class="css-1xr1fxk"
      >
        <div
          class="css-150m7z3"
        >
          <a
            class=""
            data-discover="true"
            href="/uncategorised"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-f2gdxn"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                folder_open
              </span>
              <p
                class="css-2k34x2"
              >
                Uncategorised
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`SideNavBar should render correctly in default state 1`] = `
<div>
  <nav
    class="css-5wk5xm"
  >
    <div
      class="css-tk89gm"
    >
      <p
        class="css-15fik6v"
      >
        Navigation
      </p>
      <div
        class="css-81bkrc"
      />
      <p
        class="css-11nhyxh"
      >
        SYSTEM LIBRARIES
      </p>
    </div>
    <div
      class="css-ixqrcq"
    >
      <div
        class="css-choygu"
      >
        <div
          class="css-1lekzkb"
        >
          <p
            class="css-z6fwwq"
          >
            Information Library
          </p>
          <span
            class="material-symbols-outlined"
            style="font-size: 16px; transform: rotate(180deg); transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            expand_more
          </span>
        </div>
        <div
          class="css-1xhv3dq"
        />
      </div>
      <div
        class="css-6odjo7"
      >
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/media"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                movie
              </span>
              <p
                class="css-5hra6z"
              >
                Media
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/ai"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                psychology
              </span>
              <p
                class="css-5hra6z"
              >
                AI
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/downloading"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                download_for_offline
              </span>
              <p
                class="css-5hra6z"
              >
                Downloading
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/educational"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                school
              </span>
              <p
                class="css-5hra6z"
              >
                Educational
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/mobile"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                smartphone
              </span>
              <p
                class="css-5hra6z"
              >
                Mobile
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/desktop"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                desktop_windows
              </span>
              <p
                class="css-5hra6z"
              >
                Desktop
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/reading"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                library_books
              </span>
              <p
                class="css-5hra6z"
              >
                Reading
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/gaming"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                sports_esports
              </span>
              <p
                class="css-5hra6z"
              >
                Gaming
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/privacy-security"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                admin_panel_settings
              </span>
              <p
                class="css-5hra6z"
              >
                Privacy
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/audio"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                podcasts
              </span>
              <p
                class="css-5hra6z"
              >
                Audio
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/non-english"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                translate
              </span>
              <p
                class="css-5hra6z"
              >
                Non-English
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/miscellaneous"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                category
              </span>
              <p
                class="css-5hra6z"
              >
                Miscellaneous
              </p>
            </div>
          </a>
        </div>
      </div>
      <div
        class="css-choygu"
      >
        <div
          class="css-1lekzkb"
        >
          <p
            class="css-z6fwwq"
          >
            Information Tools
          </p>
          <span
            class="material-symbols-outlined"
            style="font-size: 16px; transform: rotate(180deg); transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            expand_more
          </span>
        </div>
        <div
          class="css-1xhv3dq"
        />
      </div>
      <div
        class="css-6odjo7"
      >
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/system-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                settings_suggest
              </span>
              <p
                class="css-5hra6z"
              >
                System Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/file-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                folder_zip
              </span>
              <p
                class="css-5hra6z"
              >
                File Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/internet-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                language
              </span>
              <p
                class="css-5hra6z"
              >
                Internet Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/social-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                groups
              </span>
              <p
                class="css-5hra6z"
              >
                Social Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/text-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                text_fields
              </span>
              <p
                class="css-5hra6z"
              >
                Text Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/gaming-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                sports_esports
              </span>
              <p
                class="css-5hra6z"
              >
                Gaming Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/image-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                image
              </span>
              <p
                class="css-5hra6z"
              >
                Image Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/video-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                video_library
              </span>
              <p
                class="css-5hra6z"
              >
                Video Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/audio-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                headphones
              </span>
              <p
                class="css-5hra6z"
              >
                Audio Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/educational-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                school
              </span>
              <p
                class="css-5hra6z"
              >
                Educational Tools
              </p>
            </div>
          </a>
        </div>
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/developer-tools"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                terminal
              </span>
              <p
                class="css-5hra6z"
              >
                Developer Tools
              </p>
            </div>
          </a>
        </div>
      </div>
      <div
        class="css-choygu"
      >
        <div
          class="css-1lekzkb"
        >
          <p
            class="css-z6fwwq"
          >
            More
          </p>
          <span
            class="material-symbols-outlined"
            style="font-size: 16px; transform: rotate(180deg); transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
          >
            expand_more
          </span>
        </div>
        <div
          class="css-1xhv3dq"
        />
      </div>
      <div
        class="css-1xr1fxk"
      >
        <div
          class="css-rtymh1"
        >
          <a
            class=""
            data-discover="true"
            href="/uncategorised"
            style="text-decoration: none; display: block;"
          >
            <div
              class="css-1jav04l"
            >
              <span
                class="material-symbols-outlined"
                style="font-size: 20px; transition: all 0.3s ease;"
              >
                folder_open
              </span>
              <p
                class="css-5hra6z"
              >
                Uncategorised
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
